Fix libretro-common path for compilation
Update Makefile.common to use correct libretro-common path from shared libraries.

--- a/Makefile.common
+++ b/Makefile.common
@@ -1,4 +1,4 @@
-LIBRETRO_COMM_DIR = $(LIBRETRO_DIR)/libretro-common
+LIBRETRO_COMM_DIR = ../../libs/libretro-common
 
 SOURCES_ASM :=
 SOURCES := 	$(CORE_DIR)/apu.c \
